# editor

./: .envrc  .gitignore  .gitmodules  .stylish-haskell.yaml  README.md  cabal.project  cabal.project.freeze  editor.cabal  flake.nix  weeder.toml
.github/workflows/: dispatch.yml
common/: Common.hs  common.cabal
common/Common/: Types.hs  Utils.hs
filebuffer/: Filebuffer.hs  Highlighter.hs  Stream.hs  Utils.hs  filebuffer.cabal
filebuffer/Data/: Edits.hs  Lines.hs  Tree.hs
filebuffer/Data/Tree/: ByteString.hs  Common.hs  Lines.hs
filebuffer/Data/Vector/: Async.hs  Dynamic.hs
filebuffer/Unsafe/: ByteString.hs
filebuffer/test/: Model.hs  Test.hs  Unit.hs
main/: Main.hs  Options.hs
parse-font/: Font.hs  parse-font.cabal
parse-font/Font/: Generics.hs  Load.hs  TTF.hs
parse-font/Font/TTF/: Parse.hs  Patterns.hs  Types.hs  Utils.hs
parse-font/test/: Test.hs
renderer/: Command.hs  Font.hs  Initialize.hs  Pipeline.hs  Renderer.hs  Types.hs  Utils.hs  Vk.hs  renderer.cabal
renderer/Command/: Buffers.hs  Record.hs  Signals.hs  Write.hs
renderer/Command/Record/: Info.hs  Utils.hs
renderer/Initialize/: Allocator.hs  Device.hs  Instance.hs  Swapchain.hs  Window.hs
renderer/Initialize/Allocator/: Info.hs
renderer/Initialize/Device/: Info.hs  Utils.hs
renderer/Initialize/Instance/: Info.hs
renderer/Initialize/Swapchain/: Info.hs  Utils.hs
renderer/Pipeline/: Descriptor.hs  Graphics.hs  Images.hs  Info.hs  RenderPass.hs
renderer/Pipeline/Descriptor/: Info.hs
renderer/Pipeline/Graphics/: Info.hs  Utils.hs
renderer/Pipeline/Images/: Info.hs
renderer/Pipeline/RenderPass/: Info.hs
scripts/: cabal-watch  format  ghcid-cabal  ghcid-test  install-editor
shaders/: Setup.hs  shaders.cabal
shaders/src/: Shaders.hs  subpass0.frag  subpass0.vert  subpass1.frag  subpass1.vert  subpass2.frag  subpass2.vert  subpass3.frag  subpass3.vert
syntax/: Haskell.hs  syntax.cabal
tools/formatter/: Format.hs  Wrap.hs  formatter.cabal
tools/formatter/Format/: DataDeclaration.hs  TypeSignature.hs
tools/parser/: Parse.hs  Types.hs  parser.cabal
tools/parser/Lex/: Lines.x  Tokens.x
tools/parser/Parse/: Block.y  File.y
tools/preprocessor/: Lib.hs  Preprocessor.hs  preprocessor.cabal
vma/: Setup.hs  vma.cabal
vma/extra-headers/: vk_extra.h
vma/hsc/: VMA.hsc  VkExtra.hsc  lib.cpp
vma/hsc-gen/: Gen.hs  hsc-gen.cabal
