cabal-version: 2.4

name:       editor
version:    0.0.0
build-type: Simple
data-files: fonts/**/*.ttf

executable editor
  main-is: Main.hs
  hs-source-dirs:
      main
  default-extensions:
      OverloadedRecordDot
      DataKinds
      TypeApplications
      DisambiguateRecordFields
      ImportQualifiedPost
  other-extensions:
      TemplateHaskell
  build-tool-depends:
      preprocessor:tpr-pp
  ghc-options:
      -O2 -threaded
  build-depends:
      base
    , bytestring
    , common
    , filebuffer
    , file-embed
    , ghc
    , ghc-prim
    , mmap
    , parse-font
    , preprocessor
    , primitive
    , renderer
    , sdl2
    , shaders
    , storable-tuple
    , streaming
    , syntax
    , text
    , time
    , timeit
    , vector
    , vma
    , vulkan-api
  default-language: Haskell2010
