cabal-version: 2.4

name:       editor
version:    0.0.0
build-type: Simple
data-files: fonts/**/*.ttf

executable editor
  build-depends:
    , base
    , filebuffer
    , file-embed
    , optparse-applicative
    , parse-font
    , renderer
    , sdl2
    , shaders
    , streaming
    , syntax
    , text
  build-tool-depends:
    , preprocessor:tpr-pp
  default-extensions:
      DataKinds
      DisambiguateRecordFields
      ImportQualifiedPost
      OverloadedRecordDot
      TypeApplications
  default-language: Haskell2010
  ghc-options:
      -O2 -threaded
  hs-source-dirs:
      main
  main-is: Main.hs
  other-modules:
      Options
