cabal-version: 2.2

name:           common
version:        0.0.0
build-type:     Simple

library
  build-depends:
    , base
    , flatparse
    , ghc-prim
    , vector
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  exposed-modules:
      Common
  hs-source-dirs: .
  other-modules:
      Common.Types
      Common.Utils
