cabal-version: 2.2

name:           filebuffer
version:        0.0.0
build-type:     Simple

common shared
  build-depends:
    , base
    , bytestring
    , common
    , containers
    , flatparse
    , ghc-prim
    , streaming
    , vector
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  hs-source-dirs: .
  other-modules:
      Data.Edits
      Data.Lines
      Data.Tree
      Data.Tree.ByteString
      Data.Tree.Common
      Data.Tree.Lines
      Data.Vector.Async
      Data.Vector.Dynamic
      Stream
      Unsafe.ByteString
      Utils

library
  import: shared
  exposed-modules:
      Filebuffer

test-suite test
  import: shared
  build-depends:
    , hspec
    , knob
    , QuickCheck
    , quickcheck-instances
  ghc-options: -main-is Test
  hs-source-dirs:
      test
  main-is: Test.hs
  other-modules:
      Model
      Unit
  type: exitcode-stdio-1.0
