cabal-version: 2.2

name:           parse-font
version:        0.0.0
build-type:     Simple

common shared
  build-depends:
    , base
    , cereal
    , common
    , bytestring
    , fixed
    , hspec
    , mmap
    , mtl
    , vector
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  hs-source-dirs: .
  other-modules:
      Font.Generics
      Font.Load
      Font.TTF
      Font.TTF.Parse
      Font.TTF.Patterns
      Font.TTF.Types
      Font.TTF.Utils

library
  import: shared
  exposed-modules:
      Font

test-suite test
  import: shared
  build-depends:
    , file-embed
  ghc-options: -main-is Test
  hs-source-dirs:
      test
  main-is: Test.hs
  other-modules:
      Font
  type: exitcode-stdio-1.0
