cabal-version: 2.2

name:           shaders
version:        0.0.0
build-type:     Custom
extra-source-files:
    src/subpass0.vert
    src/subpass0.frag
    src/subpass1.vert
    src/subpass1.frag
    src/subpass2.vert
    src/subpass2.frag
    src/subpass3.vert
    src/subpass3.frag
    data/vert0.spv
    data/frag0.spv
    data/vert1.spv
    data/frag1.spv
    data/vert2.spv
    data/frag2.spv
    data/vert3.spv
    data/frag3.spv

custom-setup
  setup-depends:
    , base
    , Cabal
    , process

library
  build-depends:
    , base
    , bytestring
    , file-embed
  default-language: Haskell2010
  exposed-modules:
      Shaders
  hs-source-dirs: src
  other-modules:
      Paths_shaders
