cabal-version: 2.2

name:           syntax
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      Haskell
  hs-source-dirs:
      .
  default-extensions:
      ImportQualifiedPost
  build-depends:
      base
    , common
    , flatparse
    , ghc-prim
    , vector
  default-language: Haskell2010
