cabal-version: 2.2

name:           vma
version:        0.0.0
build-type:     Custom
extra-source-files:
    VulkanMemoryAllocator/include/vk_mem_alloc.h
    extra-headers/vk_extra.h
    hsc/VkExtra.hsc
    hsc/VMA.hsc

custom-setup
  setup-depends:
      Cabal
    , attoparsec
    , base
    , bytestring
    , hsc-gen
    , process

library
  exposed-modules:
      VkExtra
      VMA
  other-modules:
      Gen
      Paths_vma
  autogen-modules:
      Paths_vma
  hs-source-dirs:
      hsc-gen
      hsc
  default-extensions:
      ImportQualifiedPost
  ghc-options: -optcxx -std=c++14
  cxx-options: -std=c++14
  include-dirs:
      VulkanMemoryAllocator/include
  cxx-sources:
      hsc/lib.cpp
  extra-libraries:
      stdc++
      vulkan
  build-depends:
      attoparsec
    , base
    , bytestring
    , haskell-src-meta
    , template-haskell
    , th-abstraction
    , utf8-string
    , vulkan-api
  default-language: Haskell2010
