cabal-version: 2.2

name:           vma
version:        0.0.0
build-type:     Custom
extra-source-files:
    hsc/VkExtra.hsc
    hsc/VMA.hsc
    VulkanMemoryAllocator/include/vk_mem_alloc.h
    extra-headers/vk_extra.h

custom-setup
  setup-depends:
    , attoparsec
    , base
    , bytestring
    , Cabal
    , hsc-gen
    , process

library
  build-depends:
    , attoparsec
    , base
    , utf8-string
    , vulkan-api
  cxx-options: 
      -std=c++14
  cxx-sources:
      hsc/lib.cpp
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  exposed-modules:
      VkExtra
      VMA
  extra-libraries:
      stdc++
      vulkan
  ghc-options: 
      -optcxx 
      -std=c++14
  hs-source-dirs:
      hsc-gen
      hsc
  include-dirs:
      VulkanMemoryAllocator/include
  other-modules:
      Gen
