cabal-version: 2.2

name:           formatter
version:        0.0.0
build-type:     Simple

common shared
  build-depends:
    , array
    , attoparsec
    , base
    , bytestring
    , common
    , mtl
    , parser
    , process
    , temporary
  build-tool-depends:
    , alex:alex
    , happy:happy
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  hs-source-dirs: .
  other-modules:
      Format.TypeSignature
      Format.DataDeclaration
  
executable formatFile
  import: shared
  ghc-options: 
      -main-is Format
  main-is: Format.hs

executable wrap
  import: shared
  ghc-options: 
      -main-is Wrap
  main-is: Wrap.hs
  other-modules:
      Format

library
  import: shared
  exposed-modules:
      Format
