cabal-version: 2.2

name:           parser
version:        0.0.0
build-type:     Simple

library
  build-depends:
    , array
    , base
    , bytestring
  build-tool-depends:
    , alex:alex
    , happy:happy
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  exposed-modules:
      Parse
      Parse.Block
      Parse.File
  ghc-options: -g
  hs-source-dirs: .
  other-modules:
      Types
      Lex.Lines
      Lex.Tokens
