cabal-version: 2.2

name:           preprocessor
version:        0.0.0
build-type:     Simple

common shared
  build-depends:
    , base
    , bytestring
    , formatter
    , haskell-src-meta
    , parser
    , template-haskell
    , th-abstraction
  build-tool-depends:
    , alex:alex
    , happy:happy
  default-extensions:
      ImportQualifiedPost
  default-language: Haskell2010
  hs-source-dirs: .
  other-modules:
      Lib
  

library
  import: shared
  exposed-modules:
      Preprocessor

executable tpr-pp
  import: shared
  ghc-options:
      -main-is Preprocessor
  main-is: Preprocessor.hs
