cabal-version: 2.2

name:           hsc-gen
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      Gen
  other-modules:
      Paths_hsc_gen
  hs-source-dirs:
      ./
  default-extensions:
      ImportQualifiedPost
  build-depends:
      attoparsec
    , base
    , bytestring
    , utf8-string
  default-language: Haskell2010
